--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "compile:watch": "yarn compile:ts -w",
     "compile:ts": "tsc --project tsconfig.json"
   },
-  "dependencies": {},
+  "dependencies": {
+    "prettier": "^1.19.1"
+  },
   "devDependencies": {
     "@types/jest": "24.0.23",
     "@types/node": "12.12.8",
