--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "lib": ["es6"],
     "outDir": "lib",
     "alwaysStrict": true,
+    "downlevelIteration": true,
     "types": ["node", "jest"]
   },
   "include": ["src/**/*"],
